Compiler/tests/good/range2.nx
printn(size([0 .. 6]));
