Compiler/tests/bad/add1.nx
type t = [0 .. 10];

print(1 + t);
